--- a/src/components/CustomStyles.astro
+++ b/src/components/CustomStyles.astro
@@ -21,13 +21,13 @@ import '@fontsource-variable/inter';
 
 <style is:inline>
   :root {
-    --aw-font-sans: 'Inter Variable';
-    --aw-font-serif: 'Inter Variable';
-    --aw-font-heading: 'Inter Variable';
+    --aw-font-sans: 'Dosis';
+    --aw-font-serif: 'Dosis';
+    --aw-font-heading: 'Nunito';
 
-    --aw-color-primary: rgb(1 97 239);
-    --aw-color-secondary: rgb(1 84 207);
-    --aw-color-accent: rgb(109 40 217);
+    --aw-color-primary: rgb(13, 222, 225);
+    --aw-color-secondary: rgb(169, 207, 1);
+    --aw-color-accent: rgb(164, 217, 40);
 
     --aw-color-text-heading: rgb(0 0 0);
     --aw-color-text-default: rgb(16 16 16);
@@ -47,7 +47,7 @@ import '@fontsource-variable/inter';
     --aw-font-heading: 'Nunito';
 
     --aw-color-primary: #e7ff00;
-    --aw-color-secondary: rgb(111, 207, 1);
+    --aw-color-secondary: rgb(13, 222, 225);
     --aw-color-accent: rgb(167, 217, 40);
 
     --aw-color-text-heading: rgb(247, 248, 248);
@@ -59,5 +59,11 @@ import '@fontsource-variable/inter';
       background-color: black;
       color: snow;
     }
+  }
+  a.btn-primary {
+    color: #333333 !important;
+  }
+  .dark a.btn-primary {
+    color: #333333 !important;
   }
 </style>
