--- a/src/components/widgets/Testimonials.astro
+++ b/src/components/widgets/Testimonials.astro
@@ -20,7 +20,7 @@ const {
 ---
 
 <WidgetWrapper id={id} isDark={isDark} containerClass={`max-w-6xl mx-auto ${classes?.container ?? ''}`} bg={bg}>
-  <Headline title={title} subtitle={subtitle} tagline={tagline} />
+  <!-- <Headline title={title} subtitle={subtitle} tagline={tagline} /> -->
 
   <div class="grid sm:grid-cols-2 lg:grid-cols-3 gap-6">
     {
@@ -31,7 +31,7 @@ const {
               {title && <h2 class="text-lg font-medium leading-6 pb-4">{title}</h2>}
               {testimonial && (
                 <blockquote class="flex-auto">
-                  <p class="text-muted">" {testimonial} "</p>
+                  <p class="text-muted text-sm">" {testimonial} "</p>
                 </blockquote>
               )}
 
@@ -56,7 +56,7 @@ const {
                 )}
 
                 <div class="grow ml-3 rtl:ml-0 rtl:mr-3">
-                  {name && <p class="text-base font-semibold">{name}</p>}
+                  {name && <p class="text-sm font-semibold">{name}</p>}
                   {job && <p class="text-xs text-muted">{job}</p>}
                 </div>
               </div>
@@ -65,11 +65,11 @@ const {
         ))
     }
   </div>
-  {
+  <!-- {
     callToAction && (
       <div class="flex justify-center mx-auto w-fit mt-8 md:mt-12 font-medium">
         <Button {...callToAction} />
       </div>
     )
-  }
+  } -->
 </WidgetWrapper>
