feat: template WIP

--- a/src/components/CustomStyles.astro
+++ b/src/components/CustomStyles.astro
@@ -37,7 +37,7 @@ import '@fontsource-variable/inter';
     --aw-color-bg-page-dark: rgb(3 6 32);
 
     ::selection {
-      background-color: lavender;
+      background-color: #e7ff00;
     }
   }
 
@@ -56,8 +56,8 @@ import '@fontsource-variable/inter';
     --aw-color-bg-page: rgb(3 6 32);
 
     ::selection {
-      background-color: black;
-      color: snow;
+      background-color: #e7ff00;
+      color: black;
     }
   }
   a.btn-primary {
