--- a/src/components/widgets/ContentInverted.astro
+++ b/src/components/widgets/ContentInverted.astro
@@ -49,7 +49,7 @@ const {
         {
           callToAction && (
             <div class="mt-[-40px] mb-8">
-              <Button variant="link" {...callToAction} />
+              <Button {...callToAction} />
             </div>
           )
         }
